--- a/package.json
+++ b/package.json
@@ -20,7 +20,20 @@
   },
   "dependencies": {
     "@nestjs/common": "10.0.3",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "10.0.3",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/passport": "^10.0.2",
+    "@nestjs/platform-express": "^10.2.5",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "i": "^0.3.7",
+    "mongoose": "^7.5.2",
+    "npm": "^10.1.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.1",
     "rxjs": "7.8.1"
@@ -30,6 +43,11 @@
     "@nestjs/schematics": "10.0.1",
     "@types/node": "20.3.3",
     "@types/supertest": "2.0.12",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.60.1",
+    "eslint": "8.42.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-import": "2.27.5",
     "jest": "29.6.4",
     "prettier": "2.8.8",
     "supertest": "6.3.3",
@@ -37,11 +55,6 @@
     "ts-loader": "9.4.4",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
-    "eslint": "8.42.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-import": "2.27.5",
     "typescript": "5.1.6"
   }
 }
