--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 MONGODB_URL="mongodb+srv://eco:04IBpYNEESRuDdud@cluster0.uzzm70q.mongodb.net/ECO_TEST_NEST"
 EXPIRESIN=720
 SECRETKEY=khoa2520
+
+SECRETKEY_REFRESH=khoa2520_refresh
+EXPIRESIN_REFRESH=6000
