--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "i": "^0.3.7",
     "mongoose": "^7.5.2",
     "npm": "^10.1.0",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.1",
