fix auth, get all services

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 MONGODB_URL="mongodb+srv://eco:04IBpYNEESRuDdud@cluster0.uzzm70q.mongodb.net/ECO_TEST_NEST"
-EXPIRESIN=720
+EXPIRESIN=720000
 SECRETKEY=khoa2520
 
 SECRETKEY_REFRESH=khoa2520_refresh
-EXPIRESIN_REFRESH=6000
+EXPIRESIN_REFRESH=600000
+
+# redis
+REDIS_HOST=redis-17149.c295.ap-southeast-1-1.ec2.cloud.redislabs.com
+REDIS_PORT=17149
+REDIS_USERNAME=default
+REDIS_PASSWORD=bvvCDmNh1wQHl5rtau7mGYR9cCEiHcwu
