--- a/package.json
+++ b/package.json
@@ -19,19 +19,24 @@
     "test:e2e": "echo 'No e2e tests implemented yet.'"
   },
   "dependencies": {
-    "@nestjs/common": "10.0.3",
+    "@nestjs/bull": "^10.0.1",
+    "@nestjs/common": "^10.2.5",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "10.0.3",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.5",
+    "@nestjs/platform-socket.io": "^10.2.5",
+    "@nestjs/websockets": "^10.2.5",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.1",
+    "bull": "^4.11.3",
+    "cache-manager": "^5.2.3",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "i": "^0.3.7",
-    "mongoose": "^7.5.2",
     "npm": "^10.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -42,6 +47,7 @@
   "devDependencies": {
     "@nestjs/cli": "10.0.5",
     "@nestjs/schematics": "10.0.1",
+    "@types/bull": "^4.10.0",
     "@types/node": "20.3.3",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.60.1",
