--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.5",
     "@nestjs/platform-socket.io": "^10.2.5",
+    "@nestjs/schedule": "^4.0.0",
     "@nestjs/websockets": "^10.2.5",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.1",
@@ -36,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "i": "^0.3.7",
+    "node-telegram-bot-api": "^0.64.0",
     "npm": "^10.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
